# search_agent_visualizer

./: .gitignore  8-puzzle_solver.spec  LICENSE  README.md  gui.py  gui.spec  pyproject.toml
.github/workflows/: ci.yml
build_hooks/: hook-puzzle.py
src/: codemap.md  main.py
src/puzzle/: __init__.py  codemap.md  gui.py  problem.py  state.py  utils.py
src/puzzle/search_agents/: algorithm.py  codemap.md  node.py  quickfix-86
tests/puzzle/: test_problem.py  test_state.py  test_utils.py
tests/puzzle/search_agents/: test_algorithm.py  test_bfs.py  test_depth_limited_dfs.py  test_dfs.py  test_greedy_best_first_search.py  test_hill_climbing.py  test_node.py
