[project]
name = "8-puzzle-solver"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs>=25.4.0",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "tqdm>=4.67.3",
    "pyinstaller>=5.13.0",
    "coverage>=7.4.0",
]

[project.scripts]
eight-puzzle = "puzzle.gui:main"

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"
